# QuoterSystem

./: .env  README.md  docker-compose.yml
nginx/: Dockerfile
quoter_api/: Dockerfile  pyproject.toml
quoter_api/src/: entrypoint.sh  main.py
quoter_api/src/chains/: pdf_chain.py
quoter_api/src/data/: products.xlsx
quoter_api/src/data/store/: index.faiss  index.pkl
quoter_api/src/models/: quotation_models.py
quoter_api/src/utils/: create_store.py  get_pdf.py  quotation_format.py
quoter_frontend/: Dockerfile  pyproject.toml
quoter_frontend/src/: entrypoint.sh  main.py
tests/: async_quoter_requests.py  sync_quoter_requests.py
